# application/config/routes.php
@@ -19,6 +19,8 @@ $route['api/v1/receipts/(:num)'] = 'api/receipts/show/$1';
 $route['api/v1/products'] = 'api/products/index';
 
 $route['api/v1/checkout/session'] = 'api/checkout/session';
+$route['api/v1/carts'] = 'api/carts/create';
+$route['api/v1/carts/(:num)'] = 'api/carts/show/$1';
 $route['api/v1/stripe/webhook'] = 'api/stripe/webhook';
 
 $route['api/v1/admin/users'] = 'api/admin/users/index';
